tests/snapshots/cmd_pipeline__add_branch_then_generate.snap
---
source: tests/cmd_pipeline.rs
expression: p.generate_snapshot(&gen_output)
---
exit_code: 0
---stderr---
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        uses("dtolnay/rust-toolchain")
        run("cargo build")
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      uses: dtolnay/rust-toolchain@a3b77706cfa4c4bf431a39f7e267c878effdf858
    - id: step_1
      run: cargo build
