tests/snapshots/cmd_pipeline__rm_then_generate_fails.snap
---
source: tests/cmd_pipeline.rs
expression: gen_output
---
exit_code: 1
---stderr---
  Evaluating workflow definitions
Error: 
  x action `actions/checkout` is not in the lockfile
  | 
  | Run `ghat add actions/checkout` to add it.
